Added documentation and license info

--- a/GUPdotNET/GUPdotNET/app.config
+++ b/GUPdotNET/GUPdotNET/app.config
@@ -6,7 +6,7 @@
     <!-- Mandatory.
 	It's the current version of your program. 
 	-->
-	<add key="Version" value="0.9"/>
+	<add key="Version" value="0.01"/>
 	
 	<!-- Mandatory.
 	This is the url (your web application) from where your GUP gets the update information.
@@ -21,7 +21,7 @@
     <!-- Optional.
 	This is for the type of update you are using for Linux. e.g. rpm, bin, sh, tgz, etc.
 	-->
-    <add key="LinuxFileType" value="bin"/>
+    <add key="LinuxFileType" value="rpm"/>
    
     <!-- Optional. 
 	The window class name of program that you want to update.
