--- a/GUPdotNET/GUPdotNET/app.config
+++ b/GUPdotNET/GUPdotNET/app.config
@@ -3,26 +3,28 @@
 <configuration>
 	<appSettings>
 
-    <!-- Mandatory.
-	It's the current version of your program. 
+    <!-- Optional.
+	It's the current version of your program.
+	This infomation can be passed into GUPdotNET if desired
 	-->
-	<add key="Version" value="0.01"/>
+	<add key="MajorVersion" value="0"/>
+	<add key="MinorVersion" value="1"/>
 	
 	<!-- Mandatory.
 	This is the url (your web application) from where your GUP gets the update information.
 	-->
-    <add key="InfoUrl" value="http://www.brdstudio.net/temp/GetUpdateInfo.aspx"/>
+    <add key="InfoUrl" value="http://www.brdstudio.net/monotodo/GetUpdateInfo.aspx"/>
    
     <!-- Optional.
 	This is the Operating System you are using. If no OS is specified GUPdotNET will assume it is Windows
 	-->
-    <add key="OSVersion" value="Linux"/>
+    <add key="OSVersion" value="win32"/>
     
     <!-- Optional.
 	This is for the type of update you are using for Linux. e.g. rpm, bin, sh, tgz, etc.
-	-->
-    <add key="LinuxFileType" value="rpm"/>
-   
+	<add key="LinuxFileType" value="rpm"/>
+   -->
+    
     <!-- Optional. 
 	The window class name of program that you want to update.
 	GUP uses FindWindow routine to get the Handle of window, then send WM_CLOSE to the handle in order to quit the program.
@@ -31,12 +33,12 @@
 	In win32 system, if a program is running, the binary file is locked. 
 	Use this parameter to close the program to make sure the old binary files can be erased by new ones.
 	-->
-    <add key="AppToClose" value="YahtzeeSharp"/>
+    <add key="AppToClose" value="MonoToDo"/>
     
     <!-- Optional.
 	This is the title to display on the messagebox title bar.
 	-->
-    <add key="MessageBoxTitle" value="YahtzeeSharp Update"/>
+    <add key="MessageBoxTitle" value="MonoToDo Update"/>
 
 	<!-- Optional. YES by default.
 	This parameter can hide all the network error message. 
@@ -45,7 +47,7 @@
     <add key="SilentMode" value="no"/>
 
 	<!-- Simple Program Name -->
-    <add key="ProgramName" value="YahtzeeSharp"/>
+    <add key="ProgramName" value="MonoToDo"/>
     
 	</appSettings>
 </configuration>
