--- a/SQLiteDataProvider/SQLiteDataProvider-Mono.NET/SQLiteDataProvider/SQLiteDataProvider.csproj
+++ b/SQLiteDataProvider/SQLiteDataProvider-Mono.NET/SQLiteDataProvider/SQLiteDataProvider.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectGuid>{EE7C3C30-E96F-4587-8747-B2EF41D139C5}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -16,6 +16,12 @@
     <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\Andrew York\Application Data\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
     <DocumentationFile>bin\SQLiteDataProvider.xml</DocumentationFile>
     <ReferencePath>C:\Program Files\Mono-1.9\lib\mono\</ReferencePath>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <OldToolsVersion>2.0</OldToolsVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <OutputPath>bin\Debug\</OutputPath>
