--- a/GUPdotNET/GUPdotNET_Testing/GUPdotNET_Testing/app.config
+++ b/GUPdotNET/GUPdotNET_Testing/GUPdotNET_Testing/app.config
@@ -21,8 +21,12 @@
     <add key="OSVersion" value="win32"/>
     
     <!-- Optional.
-	This is for the type of update you are using for Linux. e.g. rpm, bin, sh, tgz, etc.
-	<add key="LinuxFileType" value="rpm"/>
+	Type of Installation
+	<add key="InstallType" value="make"/>
+	<add key="InstallType" value="bin"/>
+	<add key="InstallType" value="rpm"/>
+	<add key="InstallType" value="deb"/>
+	<add key="InstallType" value="msi"/>
    -->
     
     <!-- Optional. 
