--- a/GUPdotNET/GUPdotNET/GUPdotNET.csproj
+++ b/GUPdotNET/GUPdotNET/GUPdotNET.csproj
@@ -44,32 +44,32 @@
   <ItemGroup>
     <Folder Include="docs" />
     <Folder Include="gtk-gui" />
+    <Reference Include="art-sharp">
+      <HintPath>..\..\..\..\..\..\Program Files\Mono-2.2\lib\mono\gac\art-sharp\2.16.0.0__35e10195dab3c99f\art-sharp.dll</HintPath>
+    </Reference>
     <Reference Include="atk-sharp">
-      <HintPath>..\..\..\..\..\Program Files\Mono-1.9.1\lib\mono\gac\atk-sharp\2.10.0.0__35e10195dab3c99f\atk-sharp.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Mono-2.2\lib\mono\gac\atk-sharp\2.12.0.0__35e10195dab3c99f\atk-sharp.dll</HintPath>
     </Reference>
     <Reference Include="gdk-sharp">
-      <HintPath>..\..\..\..\..\Program Files\Mono-1.9.1\lib\mono\gac\gdk-sharp\2.10.0.0__35e10195dab3c99f\gdk-sharp.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Mono-2.2\lib\mono\gac\gdk-sharp\2.12.0.0__35e10195dab3c99f\gdk-sharp.dll</HintPath>
     </Reference>
     <Reference Include="glib-sharp">
-      <HintPath>..\..\..\..\..\Program Files\Mono-1.9.1\lib\mono\gac\glib-sharp\2.10.0.0__35e10195dab3c99f\glib-sharp.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Mono-2.2\lib\mono\gac\glib-sharp\2.12.0.0__35e10195dab3c99f\glib-sharp.dll</HintPath>
     </Reference>
     <Reference Include="gtk-sharp">
-      <HintPath>..\..\..\..\..\Program Files\Mono-1.9.1\lib\mono\gac\gtk-sharp\2.10.0.0__35e10195dab3c99f\gtk-sharp.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Mono-2.2\lib\mono\gac\gtk-sharp\2.12.0.0__35e10195dab3c99f\gtk-sharp.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Posix">
       <HintPath>..\..\..\..\..\..\Program Files\Mono-2.2\lib\mono\gac\Mono.Posix\2.0.0.0__0738eb9f132ed756\Mono.Posix.dll</HintPath>
     </Reference>
     <Reference Include="pango-sharp">
-      <HintPath>..\..\..\..\..\Program Files\Mono-1.9.1\lib\mono\gac\pango-sharp\2.10.0.0__35e10195dab3c99f\pango-sharp.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Mono-2.2\lib\mono\gac\pango-sharp\2.12.0.0__35e10195dab3c99f\pango-sharp.dll</HintPath>
     </Reference>
     <Reference Include="System">
-      <HintPath>..\..\..\..\..\Program Files\Mono-1.9.1\lib\mono\gac\System\2.0.0.0__b77a5c561934e089\System.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Configuration">
-      <HintPath>..\..\..\..\..\Program Files\Mono-1.9.1\lib\mono\gac\System.Configuration\2.0.0.0__b03f5f7f11d50a3a\System.Configuration.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Mono-2.2\lib\mono\gac\System\2.0.0.0__b77a5c561934e089\System.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml">
-      <HintPath>..\..\..\..\..\Program Files\Mono-1.9.1\lib\mono\gac\System.Xml\2.0.0.0__b77a5c561934e089\System.Xml.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Mono-2.2\lib\mono\gac\System.Xml\2.0.0.0__b77a5c561934e089\System.Xml.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
