--- a/GUPdotNET/GUPdotNET/GUPdotNET.csproj
+++ b/GUPdotNET/GUPdotNET/GUPdotNET.csproj
@@ -28,10 +28,10 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="docs\GUPdotNET_gpl_License.txt" />
     <None Include="GetUpdateInfo.aspx" />
     <None Include="gtk-gui\gui.stetic" />
-    <Compile Include="AssemblyInfo.cs" />
     <Compile Include="frmSuPass.cs" />
     <Compile Include="frmUpdateConfirm.cs" />
     <Compile Include="frmUpdateDownload.cs" />
@@ -41,11 +41,13 @@
     <Compile Include="gtk-gui\GUPdotNET.frmUpdateDownload.cs" />
     <Compile Include="GUPdotNET.cs" />
     <Compile Include="Main.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicEnums.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="docs" />
     <Folder Include="gtk-gui" />
+    <Folder Include="Properties" />
     <Reference Include="art-sharp">
       <HintPath>..\..\..\..\..\..\Program Files\Mono-2.2\lib\mono\gac\art-sharp\2.16.0.0__35e10195dab3c99f\art-sharp.dll</HintPath>
     </Reference>
@@ -69,6 +71,9 @@
     </Reference>
     <Reference Include="System">
       <HintPath>..\..\..\..\..\..\Program Files\Mono-2.2\lib\mono\gac\System\2.0.0.0__b77a5c561934e089\System.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Configuration">
+      <HintPath>..\..\..\..\..\..\Program Files\Mono-2.2\lib\mono\gac\System.Configuration\2.0.0.0__b03f5f7f11d50a3a\System.Configuration.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml">
       <HintPath>..\..\..\..\..\..\Program Files\Mono-2.2\lib\mono\gac\System.Xml\2.0.0.0__b77a5c561934e089\System.Xml.dll</HintPath>
