--- a/GUPdotNET/GUPdotNET_Testing/GUPdotNET_Testing/app.config
+++ b/GUPdotNET/GUPdotNET_Testing/GUPdotNET_Testing/app.config
@@ -1,35 +1,21 @@
 <?xml version="1.0" encoding="utf-8" ?>
-
 <configuration>
 	<appSettings>
-
-    <!-- Optional.
-	It's the current version of your program.
-	This infomation can be passed into GUPdotNET if desired
-	-->
-	<add key="MajorVersion" value="0"/>
-	<add key="MinorVersion" value="1"/>
-	
-	<!-- Mandatory.
-	This is the url (your web application) from where your GUP gets the update information.
-	-->
-    <add key="InfoUrl" value="http://www.brdstudio.net/monotodo/GetUpdateInfo.aspx"/>
-   
-    <!-- Optional.
-	This is the Operating System you are using. If no OS is specified GUPdotNET will assume it is Windows
-	-->
-    <add key="OSVersion" value="win32"/>
-    
-    <!-- Optional.
-	Type of Installation
-	<add key="InstallType" value="make"/>
-	<add key="InstallType" value="bin"/>
-	<add key="InstallType" value="rpm"/>
-	<add key="InstallType" value="deb"/>
-	<add key="InstallType" value="msi"/>
-   -->
-    
-    <!-- Optional. 
+		<!-- access these values via the property:
+			System.Configuration.ConfigurationManager.AppSettings[key]
+		-->
+		<!-- The Generic Name/Title of the calling program -->
+		<add key="ProgramName" value="GUPdotNET Test" />
+		<!-- The full path to the program that is being updated -->
+		<add key="ProgramFullPath" value="C://MyProgram.exe" />
+		<!-- The type of install that is needed for this installation -->
+		<add key="InstallType" value="Win32" />
+		<!--
+		<add key="InstallType" value="Linux_rpm" />
+		<add key="InstallType" value="Linux_bin" />
+		<add key="InstallType" value="Linux_src" />
+		-->
+		<!-- Optional.
 	The window class name of program that you want to update.
 	GUP uses FindWindow routine to get the Handle of window, then send WM_CLOSE to the handle in order to quit the program.
 	If there are several running instances, GUP will kill one by one until the last instance.
@@ -38,20 +24,19 @@
 	Use this parameter to close the program to make sure the old binary files can be erased by new ones.
 	-->
     <add key="AppToClose" value="MonoToDo"/>
-    
-    <!-- Optional.
-	This is the title to display on the messagebox title bar.
-	-->
-    <add key="MessageBoxTitle" value="MonoToDo Update"/>
-
-	<!-- Optional. YES by default.
-	This parameter can hide all the network error message. 
-	If "SilentMode" is set as "yes", then users won't be warned when there's no connection of internet or the url is not available. 
-	-->
-    <add key="SilentMode" value="no"/>
-
-	<!-- Simple Program Name -->
-    <add key="ProgramName" value="MonoToDo"/>
-    
-	</appSettings>
+		
+		<!-- The URL of the web site that contains the update information -->
+		<add key="UpdateInfoURL" value="http://brdstudio.net/gupdotnet/GetUpdateInfo.aspx" />
+		<!-- The current major version of the calling that we want to update -->
+		<add key="CurrentMajorVersion" value="1" />
+		<!-- The current minor version of the calling that we want to update -->
+		<add key="CurrentMinorVersion" value="0" />
+		<!-- 
+			When SilentCheck is true GUPdotNET will not notify the user when 
+ 		 	when a connection to the web site is not available or there is an error
+		-->
+		<add key="SilentCheck" value="true" />
+		<!-- The name of the program -->
+		<add key="CallingApplication" value="GUPdotNET_Test" />
+ 	</appSettings>
 </configuration>
