--- a/GUPdotNET/GUPdotNET/GUPdotNET.csproj
+++ b/GUPdotNET/GUPdotNET/GUPdotNET.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="bin" />
+    <Folder Include="bin\Debug" />
     <Folder Include="gtk-gui" />
     <Folder Include="Properties" />
     <Folder Include="web_files" />
