--- a/GUPdotNET/GUPdotNET/app.config
+++ b/GUPdotNET/GUPdotNET/app.config
@@ -5,9 +5,7 @@
 			System.Configuration.ConfigurationManager.AppSettings[key]
 		-->
 		<!-- The Generic Name/Title of the calling program -->
-		<add key="ProgramName" value="GUPdotNET Test" />
-		<!-- The full path to the program that is being updated -->
-		<add key="ProgramFullPath" value="C://MyProgram.exe" />
+		<add key="ProgramTitle" value="GUPdotNET Test" />
 		<!-- The type of install that is needed for this installation -->
 		<add key="InstallType" value="Win32" />
 		<!--
@@ -21,12 +19,5 @@
 		<add key="CurrentMajorVersion" value="1" />
 		<!-- The current minor version of the calling that we want to update -->
 		<add key="CurrentMinorVersion" value="0" />
-		<!-- 
-			When SilentCheck is true GUPdotNET will not notify the user when 
- 		 	when a connection to the web site is not available or there is an error
-		-->
-		<add key="SilentCheck" value="true" />
-		<!-- The name of the program -->
-		<add key="CallingApplication" value="GUPdotNET_Test" />
  	</appSettings>
 </configuration>
