--- a/GUPdotNET/GUPdotNET/app.config
+++ b/GUPdotNET/GUPdotNET/app.config
@@ -4,8 +4,10 @@
 		<!-- access these values via the property:
 			System.Configuration.ConfigurationManager.AppSettings[key]
 		-->
+		<!-- the name of the program as recognized by it's process -->
+		<add key="ProgramName" value="YahtzeeSharp"/>
 		<!-- The Generic Name/Title of the calling program -->
-		<add key="ProgramTitle" value="GUPdotNET Test" />
+		<add key="ProgramTitle" value="YahtzeeSharp" />
 		<!-- The type of install that is needed for this installation -->
 		<add key="InstallType" value="Win32" />
 		<!--
