* ThudSharp.sln: * ThudSharp/ThudSharp.csproj: * ThudSharp/gtk-gui/gui.stetic: * ThudSharp/Board/BoardEnums.cs: * ThudSharp/Board/BoardPieceType.cs: * ThudSharp/Board/StaticBoardPiece.cs: * ThudSharp/gtk-gui/ThudSharp.MainWindow.cs:

--- a/ThudSharp/ThudSharp/ThudSharp.csproj
+++ b/ThudSharp/ThudSharp/ThudSharp.csproj
@@ -88,7 +88,7 @@
     <Compile Include="Common\Options.cs" />
     <Compile Include="Board\ThudGameBoard.cs" />
     <Compile Include="Board\StaticBoardPiece.cs" />
-    <Compile Include="Board\BoardPieceType.cs" />
+    <Compile Include="Board\BoardEnums.cs" />
     <Compile Include="gtk-gui\ThudSharp.MainWindow.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
